syntax = "proto3";

package source;

option java_package = "com.risingwave.proto";
option optimize_for = SPEED;

message ConnectorSplit {
  string split_type = 1;
  bytes encoded_split = 2;
}

message ConnectorSplits {
  repeated ConnectorSplit splits = 1;
}

message SourceActorInfo {
  uint32 actor_id = 1;
  ConnectorSplits splits = 2;
}

message CdcTableSnapshotSplitsWithGeneration {
  map<uint32, CdcTableSnapshotSplits> splits = 1;
  uint64 generation = 2;
}

message CdcTableSnapshotSplits {
  repeated CdcTableSnapshotSplit splits = 1;
}

message CdcTableSnapshotSplit {
  int64 split_id = 1;
  bytes left_bound_inclusive = 2;
  bytes right_bound_exclusive = 3;
}
